--- a/frontend/src/stylesheets/Navbar.css
+++ b/frontend/src/stylesheets/Navbar.css
@@ -15,6 +15,8 @@
     border-radius: 6px;
     padding: 8px;
     cursor: pointer;
+    font-size: 16px;
+    font-weight: 900;
   }
   
   .LeftNav__item {
