--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -227,9 +227,11 @@ text {
 .VerticalFeed {
   height: calc(100vh - 72px);
   overflow-y: auto;
+  overflow-x: auto;
   scroll-snap-type: y mandatory;
   position: relative;
   transition: padding-right 0.3s ease;
+  min-width: auto;
 
   /* Firefox */
   scrollbar-width: none;
@@ -449,7 +451,7 @@ text {
   width: 250px; 
   height: auto;
   max-height: 200px; 
-  border: solid 1px black;
+  border: solid 1px rgba(255, 255, 255, 0.1);
   border-radius: 15px;
   padding: 15px;
   background-color: rgba(255, 255, 255, 0.1);
